# calli-glyph

./: .swp  Cargo.toml  LICENSE  README.md  lorem.txt  test.txt  test3.txt  testdocument.txt  untitled
.github/workflows/: ci.yml  release.yml
docs/: config.toml  debugger.toml
docs/help/: command_line.md  config.md  debugger.md  editor.md  help.md  keybindings.md  plugins.md  search_replace.md  undo_redo.md
src/: app.rs  app_config.rs  args.rs  clipboard.rs  command_line.rs  config.rs  confirmation_popup.rs  cursor.rs  editor.rs  error_popup.rs  errors.rs  input.rs  lib.rs  macros.rs  main.rs  popup.rs  ui.rs
src/config/: defaults.rs  editor.rs  keymaps.rs  mod.rs  performance.rs  plugins.rs  ui.rs
src/core/: app.rs  clipboard.rs  cursor.rs  errors.rs  help_registry.rs  mod.rs
src/core/command_line/: command.rs  command_binds.rs  command_executor.rs  command_line.rs  mod.rs
src/core/debug/: app_extensions.rs  logger.rs  metrics.rs  mod.rs  state.rs
src/core/editor/: editor.rs  (+2 more)
src/editor/: editor.rs  mod.rs  undo_redo.rs
src/errors/: command_errors.rs  config_errors.rs  error.rs  mod.rs  plugin_error.rs
src/input/: actions.rs  input.rs  input_action.rs  mod.rs
src/language/: manager.rs  mod.rs  syntax.rs  theme.rs
src/plugins/: mod.rs  plugin_registry.rs  search_replace_plugin.rs  test_plugin.rs
src/popups/: confirmation_popup.rs  error_popup.rs
src/tests/: app_tests.rs  editor_tests.rs  mod.rs
src/ui/: debug.rs  layout.rs  mod.rs  ui.rs
tests/: app_tests.rs  config_tests.rs  debug_tests.rs  editor_tests.rs  mod.rs
themes/: dark.toml
(+28 files in other folders)
