[package]
name = "calliglyph"
version = "0.3.0"
authors = ["Victor B. Pedersen <vpede23@sdu.student.dk>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.5"
tempfile = "3.23.0"
thiserror = "2.0.17"
sysinfo = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
dirs = "6.0.0"  # For cross-platform config directory
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21.3"
chrono = "0.4.43"

[dev-dependencies]
serial_test = "3.3.1"